client/src/App.css
@import url("https://fonts.googleapis.com/css?family=Bai+Jamjuree");
@import url("https://fonts.googleapis.com/css2?family=Fredoka&family=Montserrat&display=swap");

html,
body {
	margin: 0;
	padding: 0;
	background-color: #fff;
}

canvas {
	display: block;
	width: calc(100vw);
	height: 1000000px;
	background: #000;
}

#container {
	margin: 10px auto;
	position: relative;
	border-radius: 50%;
	animation: spin 10s linear infinite;
	rotate: 55deg;
	transition: transform 2s;
}

.item {
	width: 1000px;
	height: 400px;
	/* border-color: rgb(238, 255, 0); */
	display: flex;
	justify-content: center;
	align-items: center;
	/* border-radius: 32px; */
	/* border-width: 10px; */
	/* line-height: 30px; */
	text-align: center;
	position: absolute;
	/* background: rgba(137, 125, 125, 0); */
}

/* @keyframes spin {
    100% {
      transform: rotate(1turn);
    }
  } */

/* ------------------------------TEXT---------------------------------*/

@import url(//fonts.googleapis.com/css?family=Comfortaa:70);

.logo {
	/* text-align: center; */
	/* width: fit-content; */
	height: fit-content;
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
}

.logo {
	/* font-family: "Comfortaa"; */
	/* font-family: "Bai Jamjuree", sans-serif; */
	width: 100%;
	justify-content: center;
	font: 100 15vh "Bai Jamjuree";
	/* font-family: 'Fredoka', sans-serif; */
	color: #fee;
	text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #329ed6, 0 0 0.5em #329ed6,
		0 0 0.1em #329ed6, 0 10px 3px #000;
}

.sangam {
	/* font-family: "Bai Jamjuree", sans-serif; */
	font-family: "Bai Jamjuree", sans-serif;
}

.card {
	font-family: "Bai Jamjuree";
	color: #fee;
	text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #329ed6, 0 0 0.5em #329ed6,
		0 0 0.1em #329ed6, 0 0 0 #000;
}

.blink {
	/* font-family: 'Montserrat', sans-serif; */
	animation: blink linear infinite 3s;
}

@keyframes blink {
	78% {
		color: inherit;
		text-shadow: inherit;
	}

	79% {
		color: #333;
	}

	80% {
		text-shadow: none;
	}

	81% {
		color: inherit;
		text-shadow: inherit;
	}

	82% {
		color: #333;
		text-shadow: none;
	}

	83% {
		color: inherit;
		text-shadow: inherit;
	}

	92% {
		color: #333;
		text-shadow: none;
	}

	92.5% {
		color: inherit;
		text-shadow: inherit;
	}
}

.rotate {
	animation: rotate 5s linear infinite;
}

@keyframes rotate {
	to {
		transform: rotate(360deg);
	}
}

.spinner {
	margin-top: 0.3%;
	padding: 0%;
	border: 0%;
	width: 12vh;
	/* max-width: 5.5%; */
	display: inline-block;
}

/* Add a media query for smaller screens */
@media (max-width: 768px) {
	.logo {
		font-size: 10vh;
		/* Adjust font size for smaller screens */
	}

	.photo {
		margin-top: 1%;
		max-width: 18%;
	}
}

/* ------------------------------------------------------------------------------------------------- */
/* -------------------------------------LANDINGPAGEMAINCANVAS------------------------------------------------ */

.small-screen-landing-page {
	@media screen and (min-width: 677px) {
		display: none;
	}
}

.big-screen-landing-page {
	@media screen and (max-width: 678px) {
		display: none;
	}
}

/* ---------------------------------------------------------------------------------------- */
/* -------------------------------------EVENTS------------------------------------------------ */

.selectedEvent {
	border-bottom: 2px solid rgb(253, 253, 253);
}

/* ---------------------------------------------------------------------------------------- */
/* -------------------------------------LEADERBOARD-CONTAINER----------------------------- */

.leaderboard-contaier {
	@media screen and (max-width: 769px) {
		padding-top: 70px;
	}

	@media screen and (min-width: 768px) {
		padding-top: 145px;
	}
}

/* ---------------------------------------------------------------------------------------- */
/* -------------------------------------EVENTSPODIUM------------------------------------------------ */

.events-podium {
	display: flex;
	flex-direction: row;
}

.events-podium-container {
	width: calc(1 / 3 * 100vw);
	height: 100vh;
	display: flex;
	justify-content: center;
	align-items: center;
}

@media screen and (max-width: 850px) {
	.events-podium {
		margin-top: 100px;
		display: flex;
		flex-direction: column;
	}

	.events-podium-container {
		width: 100vw;
		height: fit-content;
		display: flex;
		justify-content: center;
		align-items: center;
	}

	.events-podium-line {
		display: none;
	}
}

/* ---------------------------------------------------------------------------------------- */
/* -------------------------------------PODIUM------------------------------------------------ */

.container {
	display: flex;
	align-items: flex-end;
	color: white;
	width: 100%;
	justify-content: center;

	@media screen and (max-width: 300px) {
		scale: 70%;
	}
}

.container-events-podium {
	scale: 70%;
}

.podium__item {
	width: 250px;
	transition: 0.5s;
}

.podium__item:hover {
	@media screen and (min-width: 768px) {
		scale: 120%;
		filter: contrast(140%);
	}
}

.podium__rank {
	display: flex;
	justify-content: center;
	align-items: center;
	font-size: 35px;
	color: #fff;
}

.podium__city {
	text-align: center;
	padding: 0 0.5rem;
}

.podium__number {
	width: 27px;
	height: 75px;
}

.podium .first {
	height: 300px;

	@media screen and (max-width: 400px) {
		scale: 90%;
	}
}

.podium .second {
	height: 280px;

	@media screen and (max-width: 400px) {
		scale: 75%;
	}
}

.podium .third {
	height: 250px;

	@media screen and (max-width: 400px) {
		scale: 65%;
	}
}

/* clear background */
h2 {
	text-align: center;
	color: rgb(148, 159, 177);
	padding: 16px;
	margin: 0;
}

/* crops animations that exceeds one line area */
.line {
	width: 100%;
	height: 4rem;
	padding: 0;
	margin-bottom: 16px;
}

/* flipping class and key frames*/
.flipX {
	animation: 1s anim-flipX ease infinite;
}
/* ... */

